--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "sass": "latest"
+    "react-hook-form": "^6.9.2",
+    "sass": "^1.27.0"
   },
   "scripts": {
     "dev": "next dev",
